# internal/infrastructure/http/handlers/customer.go
@@ -118,3 +118,50 @@ func (c *CustomerHandler) ViewCustomer(ctx *fiber.Ctx) error {
 
 	return ctx.Status(response.Code).JSON(response)
 }
+
+// UpdateCustomer godoc
+// @Summary Melakukan update customer
+// @Description Melakukan update customer berdasarkan ID
+// @Tags Customer
+// @Accept  json
+// @Produce  json
+// @Param   id   path int true "Customer ID"
+// @Param   body body requests.UpdateCustomer true "Update Customer Request"
+// @Success 200 {object} responses.CustomerUpdateResponseWrapper
+// @Failure 400 {object} responses.ErrorBadRequestResponse
+// @Failure 404 {object} responses.ErrorNotFoundResponse
+// @Router /customers/{id} [put]
+// @Security BearerAuth
+func (c *CustomerHandler) UpdateCustomer(ctx *fiber.Ctx) error {
+	request := new(requests.UpdateCustomer)
+	var response responses.BaseResponse[*responses.CustomerResponse]
+
+	id := ctx.Params("id")
+	if id == "" {
+		response.Code = fiber.StatusBadRequest
+		response.Message = "Invalid request"
+		response.Errors = "ID tidak ditemukan"
+		return ctx.Status(fiber.StatusBadRequest).JSON(response)
+	}
+
+	if _, err := strconv.Atoi(id); err != nil {
+		response.Code = fiber.StatusBadRequest
+		response.Message = "Invalid request"
+		response.Errors = "ID harus berupa angka"
+		return ctx.Status(response.Code).JSON(response)
+	}
+
+	if err := ctx.BodyParser(request); err != nil {
+		response.Code = fiber.StatusBadRequest
+		response.Message = "Invalid request"
+		response.Errors = err.Error()
+		return ctx.Status(fiber.StatusBadRequest).JSON(response)
+	}
+	request.ID = id
+	response = c.service.UpdateCustomer(ctx.Context(), request)
+	if response.Errors != "" {
+		return ctx.Status(response.Code).JSON(response)
+	}
+
+	return ctx.Status(response.Code).JSON(response)
+}
