# internal/infrastructure/http/router/customer.go
@@ -10,4 +10,5 @@ func SetupCustomerRoutes(router fiber.Router, handler *handlers.CustomerHandler)
 	router.Get("", handler.GetAllCustomer)
 	router.Post("", handler.Create)
 	router.Get(":id", handler.ViewCustomer)
+	router.Put(":id", handler.UpdateCustomer)
 }
